wip: change default fr to english by now

--- a/locales/fr/404.json
+++ b/locales/fr/404.json
@@ -1,5 +1,5 @@
 {
-  "bigText": "Désolé, nous n'avons pas pu trouver cette page.",
-  "littleText": "Ne vous inquiétez pas, vous pourrez trouver plein d'autres choses sur notre page d'accueil.",
-  "backButton": "Retour à la page d'accueil"
+  "bigText": "Sorry we couldn't find this page.",
+  "littleText": "But dont worry, you can find plenty of other things on our homepage.",
+  "backButton": "Back to homepage"
 }
