--- a/locales/fr/headerNavLinks.json
+++ b/locales/fr/headerNavLinks.json
@@ -1,6 +1,7 @@
 {
+  "home": "Home",
   "blog": "Blog",
   "tags": "Tags",
-  "projects": "Projets",
-  "about": "À Propos"
+  "projects": "Projects",
+  "about": "About"
 }
