--- a/locales/fr/projects.json
+++ b/locales/fr/projects.json
@@ -1,5 +1,5 @@
 {
-  "title": "Projets",
-  "learn": "En savoir plus",
-  "subtitle": "Montrez vos projects avec une image (16 x 9)."
+  "title": "Projects",
+  "learn": "Learn more",
+  "subtitle": "Showcase your projects with a hero image (16 x 9)."
 }
