--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,18 +1,18 @@
 {
-  "greeting": "Les plus récents",
-  "more": "Lire la suite",
-  "all": "Tous Les Articles",
-  "search": "Recherche",
-  "comment": "Charger les commentaires",
-  "pub": "Publié le",
-  "authors": "Auteurs",
-  "name": "Nom",
-  "nexta": "Article Suivant",
-  "preva": "Article Précédent",
-  "nextp": "Suivant",
-  "prevp": "Précédent",
-  "of": "sur",
-  "back": "Retour sur le blog",
-  "twitter": "Discuter sur Twitter",
-  "github": "Voir sur GitHub"
+  "greeting": "Latest",
+  "more": "Read more",
+  "all": "All Posts",
+  "search": "Search articles",
+  "comment": "Load Comments",
+  "pub": "Published",
+  "authors": "Authors",
+  "name": "Name",
+  "nexta": "Next Article",
+  "preva": "Previous Article",
+  "nextp": "Next",
+  "prevp": "Previous",
+  "of": "of",
+  "back": "Back to the blog",
+  "twitter": "Discuss on Twitter",
+  "github": "View on GitHub"
 }
