--- a/locales/fr/newsletter.json
+++ b/locales/fr/newsletter.json
@@ -1,10 +1,10 @@
 {
-  "mail": "Adresse Mail",
-  "title": "Abonnez-vous à la newsletter",
-  "messageError": "Votre adresse e-mail est invalide ou  déjà inscrite !",
-  "messageSuccess": "Succès ! Vous êtes maintenant abonné. 🎉",
-  "placeholderSucces": "Vous êtes inscrit ! 🎉",
-  "placeholderDefault": "Entrez votre adresse mail",
-  "buttonSuccess": "Merci !",
-  "buttonDefault": "S'inscrire"
+  "mail": "Email address",
+  "title": "Subscribe to the newsletter",
+  "messageError": "Your e-mail adress is invalid or you are already subscribed!",
+  "messageSuccess": "Successfully! 🎉 You are now subscribed.",
+  "placeholderSucces": "You're subscribed !  🎉",
+  "placeholderDefault": "Enter your email",
+  "buttonSuccess": "Thank you!",
+  "buttonDefault": "Sign up"
 }
