--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -14,5 +14,6 @@
   "of": "of",
   "back": "Back to the blog",
   "twitter": "Discuss on Twitter",
-  "github": "View on GitHub"
+  "github": "View on GitHub",
+  "learning": "Learning Diary"
 }
