fix: language, style and upgrade packages

--- a/data/blog/introducing-tailwind-nextjs-starter-blog.pt.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.pt.mdx
@@ -6,7 +6,7 @@ tags: ['next-js', 'tailwind', 'guide']
 draft: false
 summary: 'Lorem Ipsum français'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
-authors: ['default', 'sparrowhawk']
+authors: ['default']
 ---
 
 ![tailwind-nextjs-banner](/static/images/twitter-card.png)
