--- a/data/learning/02-2022.mdx
+++ b/data/learning/02-2022.mdx
@@ -3,29 +3,25 @@ date: '2022-02-02'
 draft: false
 ---
 
-## 3 Feb 2022
+## 10 Feb 2022
 
-### Work
+### Hobby
 
-- [test] test
+- [English] Practiced in [Talk'n Talk](https://www.talkntalk.com.br/) session about friendship and met two elders wonderful people from Brazil, really grateful for that.
 
 ### Programming
 
-- [test] test
+- [Clojure] Studied a little more, used some group-by function to merge related data.
 
 ### Resources
 
-- [Gatsby-remark-table-of-contents](https://www.gatsbyjs.com/plugins/gatsby-remark-table-of-contents/)
-- [Gatsby-remark-table-of-contents](https://www.gatsbyjs.com/plugins/gatsby-remark-table-of-contents/)
+- [Clojure cheatsheet](https://clojure.org/api/cheatsheet)
+- [Group-by examples docs](https://clojuredocs.org/clojure.core/group-by)
 
 ---
 
-## 2 Feb 2022
+## 9 Feb 2022
 
 ### Work
 
-- [test] test
-
-### Programming
-
-- [test] test
+- [Azure Devops] Worked on some pipelines and using [semantic-release](https://github.com/semantic-release/semantic-release) to automate version based on commit, tried to solve a bug of permission.
