--- a/data/learning/02-2022.pt.mdx
+++ b/data/learning/02-2022.pt.mdx
@@ -1,31 +1,27 @@
 ---
-date: '2020-11-11'
+date: '2022-02-02'
 draft: false
 ---
 
-## 3 Feb 2022
+## 10 Fev 2022
 
-### Work
+### Tempo livre
 
-- [test] test
+- [Inglês] Pratiquei em uma sessão no [Talk'n Talk](https://www.talkntalk.com.br/) sobre amizade e conheci duas pessoas incríveis com bastante experiência de vida aqui do Brasil, muito grato por isso.
 
-### Programming
+### Programação
 
-- [test] test
+- [Clojure] Estudei um pouco mais, usei algumas funções de group-by para mesclar dados relacionados.
 
-### Resources
+### Recursos
 
-- [Gatsby-remark-table-of-contents](https://www.gatsbyjs.com/plugins/gatsby-remark-table-of-contents/)
-- [Gatsby-remark-table-of-contents](https://www.gatsbyjs.com/plugins/gatsby-remark-table-of-contents/)
+- [Clojure cheatsheet](https://clojure.org/api/cheatsheet)
+- [Group-by documentação de exemplos](https://clojuredocs.org/clojure.core/group-by)
 
 ---
 
-## 2 Feb 2022
+## 9 Fev 2022
 
-### Work
+### Trabalho
 
-- [test] test
-
-### Programming
-
-- [test] test
+- [Azure Devops] Trabalhei em algumas 'pipelines' usando [semantic-release](https://github.com/semantic-release/semantic-release) para automatizar as versões baseado nos 'commits', tentei resolver alguns problemas de permissão.
