--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -15,5 +15,10 @@
   "back": "Back to the blog",
   "twitter": "Discuss on Twitter",
   "github": "View on GitHub",
-  "learning": "Learning Diary"
+  "hi": "Hi, I'm",
+  "mini-bio": "A Software Engineer that code for passion and design for fun.",
+  "learning": "Learning Diary",
+  "about": "About me",
+  "about-description": "Learn about me, my career and a timeline of my lifetime.",
+  "not-playing": "Not playing"
 }
