--- a/locales/pt/headerNavLinks.json
+++ b/locales/pt/headerNavLinks.json
@@ -1,8 +1,8 @@
 {
-  "home": "Home",
+  "home": "Início",
   "blog": "Blog",
-  "projects": "Projects",
-  "about": "About",
-  "learning": "Learning",
+  "projects": "Projetos",
+  "about": "Sobre",
+  "learning": "Diário de aprendizado",
   "hobbies": "Hobbies"
 }
