--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -1,5 +1,4 @@
 {
   "title": "Projects",
-  "learn": "Learn more",
-  "subtitle": "Showcase your projects with a hero image (16 x 9)."
+  "learn": "Learn more"
 }
