--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -1,19 +1,24 @@
 {
   "greeting": "Latest",
   "more": "Read more",
-  "all": "All Posts",
-  "search": "Search articles",
-  "comment": "Load Comments",
-  "pub": "Published",
-  "authors": "Authors",
-  "name": "Name",
-  "nexta": "Next Article",
-  "preva": "Previous Article",
-  "nextp": "Next",
-  "prevp": "Previous",
-  "of": "of",
-  "back": "Back to the blog",
-  "twitter": "Discuss on Twitter",
-  "github": "View on GitHub",
-  "learning": "Learning Diary"
+  "all": "Todos Posts",
+  "search": "Procurar artigos",
+  "comment": "Carregar comentários",
+  "pub": "Públicado",
+  "authors": "Autores",
+  "name": "Nome",
+  "nexta": "Próximo artigo",
+  "preva": "Artigo anterior",
+  "nextp": "Próximo",
+  "prevp": "Anterior",
+  "of": "de",
+  "back": "Voltar para o blog",
+  "twitter": "Discutir no Twitter",
+  "github": "Veja no GitHub",
+  "hi": "Olá, sou",
+  "mini-bio": "Engenheiro de Software que codifica por paixão e cria por diversão.",
+  "learning": "Diário de aprendizado",
+  "about": "Sobre mim",
+  "about-description": "Saiba mais sobre mim, minha carreira e veja linha do tempo da minha vida.",
+  "not-playing": "Nada tocando"
 }
