--- a/locales/pt/404.json
+++ b/locales/pt/404.json
@@ -1,5 +1,5 @@
 {
-  "bigText": "Sorry we couldn't find this page.",
-  "littleText": "But dont worry, you can find plenty of other things on our homepage.",
-  "backButton": "Back to homepage"
+  "bigText": "Desculpe, mas não conseguimos achar essa página.",
+  "littleText": "Mas não se preocupe, você pode encontrar muitas coisas na página inicial.",
+  "backButton": "Voltar para o início"
 }
