fix: upgrade packages, add initial blog post, rework mdx and add embed extension

--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -1,6 +1,6 @@
 {
-  "greeting": "Latest",
-  "more": "Read more",
+  "greeting": "Últimos",
+  "more": "Leia mais",
   "all": "Todos Posts",
   "search": "Procurar artigos",
   "comment": "Carregar comentários",
