fix: remove unused images, add config next, upgrade package and add first blog post

--- a/data/blog/motivation-changes-and-the-beginning.pt.mdx
+++ b/data/blog/motivation-changes-and-the-beginning.pt.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Motivação, mudanças e o começo'
-date: '2021-02-14'
-tags: ['talk']
+date: '2021-02-15'
+tags: ['talk', 'motivation', 'changes', 'beginning']
 draft: false
 summary: 'Estou começando este site com um propósito — perpetuar um sentido a minha vida, e um lar para minha mente.'
 layout: 'PostSimple'
@@ -11,7 +11,7 @@ layout: 'PostSimple'
 
 ## Motivação
 
-Estou começando este site com um propósito — perpetuar um sentido a minha vida, e um lar para minha mente. Dias conturbados com um sentido de um futuro melhor, caminho com isso em mente e este projeto  que estou a um bom tempo construindo e tem me permitido abrir a mente e pensar fora da caixa de diversas formas. 
+Estou começando este site com um propósito — perpetuar um sentido a minha vida, e um lar para minha mente. Dias conturbados com um sentido de um futuro melhor, caminho com isso em mente e este projeto  que estou a um bom tempo construindo e tem me permitido abrir a mente e pensar fora da caixa de diversas formas.
 
 Desde as pessoas que conheci, as entrevistas que participei e todo processo de aprendizado e crescimento tem uma grande força de me mover adiante.
 
@@ -29,7 +29,7 @@ Bom, como já devem ter percebido, este site não será um local apenas para fal
 
 ## O Começo
 
-Tenho bastante ideias para este espaço, considero isso um começo, não só para mim como pessoa, mas também em espírito. Em todo esse processo de auto-conhecimento, aprendi novas linguagens, conheci diferentes métodos de pensamento e tive um boom de pensar e agir fora da caixa.
+Tenho muitas ideias para este espaço, considero isso um começo, não só para mim como pessoa, mas também em espírito. Em todo esse processo de auto-conhecimento, aprendi novas linguagens, conheci diferentes métodos de pensamento e tive um 'boom' de pensar e agir fora da caixa.
 
 Grandeza a partir de pequenos começos, este é o significado da frase gravada no anel presente no início do site, algo que está comigo há muito tempo, mas que começa a ter  um sentido mais claro a cada dia que passa.
 
