--- a/data/blog/motivation-changes-and-the-beginning.mdx
+++ b/data/blog/motivation-changes-and-the-beginning.mdx
@@ -1,38 +1,38 @@
 ---
-title: 'Motivação, mudanças e o começo'
-date: '2021-02-14'
-tags: ['talk']
+title: 'Motivation, Changes and the beginning'
+date: '2021-02-15'
+tags: ['talk', 'motivation', 'changes', 'beginning']
 draft: false
-summary: 'Estou começando este site com um propósito — perpetuar um sentido a minha vida, e um lar para minha mente.'
+summary: 'I am starting this site with a purpose - to perpetuate a meaning to my life, and to be a home for my mind.'
 layout: 'PostSimple'
 ---
 
-👋 Olá! Seja muito bem-vindo ao meu primeiro post. Faço deste um local onde irei compartilhar, aprender e ensinar o pouco que aprendi ao lado de pessoas incríveis.
+👋 Hello, and welcome to my first post. I make this a place where I will share, learn and teach the little I have learned alongside amazing people.
 
-## Motivação
+## Motivation
 
-Estou começando este site com um propósito — perpetuar um sentido a minha vida, e um lar para minha mente. Dias conturbados com um sentido de um futuro melhor, caminho com isso em mente e este projeto  que estou a um bom tempo construindo e tem me permitido abrir a mente e pensar fora da caixa de diversas formas. 
+I am starting this site with a purpose - to perpetuate a meaning to my life, and to be a home for my mind. Troubled days with a sense of a better future, I walk with that in mind and this project I have been building for a while, and it has allowed me to open my mind and think outside the box in many ways.
 
-Desde as pessoas que conheci, as entrevistas que participei e todo processo de aprendizado e crescimento tem uma grande força de me mover adiante.
+From the people I have met, the interviews I have participated in, and the whole process of learning and growing, it has a power to move me forward.
 
 > It's better to look ahead and prepare, than to look back and regret. Jackie Joyner-Kersee
 
 ![sic-parvis-magna](/static/images/motivation-changes-and-the-beginning/sic-parvis-magna.jpg)
 
-## Mudanças
+## Changes
 
-Bom, como já devem ter percebido, este site não será um local apenas para falar de programação, arquitetura ou desenvolvimento na totalidade, assim como todas as mudanças que vem acontecendo em minha vida, tenho tentado desenvolver e melhorar minhas 'soft skills' tanto quanto minhas 'hard skills'. 
+Well, as you may have realized by now, this site will not be a place just to talk about programming, architecture or development in totality, just like all the changes that have been happening in my life, I have been trying to develop and improve my 'soft skills' as much as my 'hard skills'.
 
-É um processo lento e de difícil compreensão, assim como a recente migração de empresa que estou realizando, tudo tende a agir em um comum sentido. Conheci pessoas incríveis e fiz grandes amigos nesse processo, sentirei bastante falta.
+It is a slow and difficult to understand this process, as well as the recent company migration that I am making, everything tends to act in a common direction. I met amazing people and made great friends in this process and I will miss them a lot.
 
 ![git-presentation-precisao-sistemas](/static/images/motivation-changes-and-the-beginning/git-presentation-precisao-sistemas.jpg)
 
-## O Começo
+## The Beginning
 
-Tenho bastante ideias para este espaço, considero isso um começo, não só para mim como pessoa, mas também em espírito. Em todo esse processo de auto-conhecimento, aprendi novas linguagens, conheci diferentes métodos de pensamento e tive um boom de pensar e agir fora da caixa.
+I have many ideas for this space, I consider it a beginning, not only for me as a person, but also in spirit. In this whole process of self-knowledge, I have learned new languages, understanding me and others, learned about thinking differently, and had a 'boom' of thinking and acting outside the box.
 
-Grandeza a partir de pequenos começos, este é o significado da frase gravada no anel presente no início do site, algo que está comigo há muito tempo, mas que começa a ter  um sentido mais claro a cada dia que passa.
+Greatness from small beginnings, this is the meaning of the phrase engraved on the ring present at the beginning of the site, something that has been with me for a long time, but that begins to have a clearer meaning with each passing day.
 
 ![welcome-kit-hotmart](/static/images/motivation-changes-and-the-beginning/welcome-kit-hotmart.jpg)
 
-Obrigado por ler até aqui ❤️
+Thanks for reading this far ❤️
