feat: add new learning topics

--- a/data/learning/02-2022.mdx
+++ b/data/learning/02-2022.mdx
@@ -3,6 +3,22 @@ date: '2022-02-02'
 draft: false
 ---
 
+## 16 Feb 2022
+
+### Work
+
+- [Challenge] As an onboarding process, we were introduced to a challenge about working together to create an imaginary product to test and learn the main platform of the company, fascinating way of learning it.
+
+---
+
+## 15 Feb 2022
+
+### Hobby
+
+- [Front-end] Discovered a bug in my website that when hovering a card with `react-spring` effect, it goes behind the background on safari, couldn't reproduce it on Chrome, Firefox or Edge.
+
+---
+
 ## 10 Feb 2022
 
 ### Hobby
