--- a/data/learning/02-2022.pt.mdx
+++ b/data/learning/02-2022.pt.mdx
@@ -3,6 +3,22 @@ date: '2022-02-02'
 draft: false
 ---
 
+## 16 Fev 2022
+
+### Trabalho
+
+- [Desafio] Como um processo de onboarding, nós fomos introduzidos a um desafio em grupo para criação de um produto imaginário para testarmos e utilizarmos a plataforma da empresa, método fascinante de aprender.
+
+---
+
+## 15 Fev 2022
+
+### Tempo livre
+
+- [Front-end] Descobri um bug em meu site que ao passar o mouse sobre um cartão com efeito utilizando `react-spring`, ele fica atrás do fundo no navegador safari, não conseguindo reproduzi-lo no Chrome, Firefox ou Edge.
+
+---
+
 ## 10 Fev 2022
 
 ### Tempo livre
