--- a/data/blog/motivation-changes-and-the-beginning.mdx
+++ b/data/blog/motivation-changes-and-the-beginning.mdx
@@ -3,7 +3,7 @@ title: 'Motivation, Changes and the beginning'
 date: '2021-02-15'
 tags: ['talk', 'motivation', 'changes', 'beginning']
 draft: false
-summary: 'I am starting this site with a purpose - to perpetuate a meaning to my life, and to be a home for my mind.'
+summary: 'I am starting this site with a purpose - to perpetuate a meaning for my life, and to be a home for my mind.'
 layout: 'PostSimple'
 ---
 
@@ -11,7 +11,7 @@ layout: 'PostSimple'
 
 ## Motivation
 
-I am starting this site with a purpose - to perpetuate a meaning to my life, and to be a home for my mind. Troubled days with a sense of a better future, I walk with that in mind and this project I have been building for a while, and it has allowed me to open my mind and think outside the box in many ways.
+I am starting this site with a purpose - to perpetuate a meaning for my life, and to be a home for my mind. Troubled days with a sense of a better future, I walk with that in mind and this project I have been building for a while, and it has allowed me to open my mind and think outside the box in many ways.
 
 From the people I have met, the interviews I have participated in, and the whole process of learning and growing, it has a power to move me forward.
 
