--- a/locales/en/learning.json
+++ b/locales/en/learning.json
@@ -1,4 +1,4 @@
 {
   "subtitle": "Documenting my learning journey throughout the years.",
-  "description": "A place where I share resources that I'm learning throughout the years."
+  "description": "A place where I share resources that I've been learning throughout the years."
 }
