--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -16,7 +16,7 @@
   "twitter": "Discuss on Twitter",
   "github": "View on GitHub",
   "hi": "Hi, I'm",
-  "mini-bio": "A Software Engineer that code for passion and design for fun.",
+  "mini-bio": "A Software Engineer that codes for passion and designs for fun.",
   "learning": "Learning Diary",
   "about": "About me",
   "about-description": "Learn about me, my career and a timeline of my lifetime.",
