feat(learning): add 18 and 17 of feb

--- a/data/learning/02-2022.mdx
+++ b/data/learning/02-2022.mdx
@@ -3,6 +3,29 @@ date: '2022-02-02'
 draft: false
 ---
 
+## 18 Feb 2022
+
+### Work
+
+- [Challenge] Presented a pitch about a fictitious product to improve your chances of getting a job.
+
+### Hobby
+
+- [English Class] Had a review of `if statements` and funny conversation about life and miscellaneous things.
+
+---
+
+## 17 Feb 2022
+
+### Work
+
+- [Challenge] Found a very interesting website to create personas and were able to complement our challenge with beautiful and organized images.
+
+### Resources
+
+- [Hubspot Make My Persona](https://hubspot.com/make-my-persona)
+
+---
 ## 16 Feb 2022
 
 ### Work
