--- a/data/learning/02-2022.pt.mdx
+++ b/data/learning/02-2022.pt.mdx
@@ -3,6 +3,30 @@ date: '2022-02-02'
 draft: false
 ---
 
+## 18 Fev 2022
+
+#### Trabalho
+
+- [Desafio] Apresentamos um projeto sobre um produto fictício para melhorar suas chances na obtenção de um emprego.
+
+### Hobby
+
+- [Inglês] Revisão de 'if statements' e uma conversa engraçada sobre a vida e coisas diversas.
+
+---
+
+## 17 Fev 2022
+
+#### Trabalho
+
+- [Desafio] Encontrei um site muito interessante para criar personas e conseguimos complementar nosso desafio com imagens bonitas e organizadas.
+
+### Recursos
+
+- [Hubspot Make My Persona](https://hubspot.com/make-my-persona)
+
+---
+
 ## 16 Fev 2022
 
 ### Trabalho
