fix: upgrade packages and typo

--- a/data/learning/02-2022.pt.mdx
+++ b/data/learning/02-2022.pt.mdx
@@ -11,7 +11,7 @@ draft: false
 
 ### Hobby
 
-- [Inglês] Revisão de 'if statements' e uma conversa engraçada sobre a vida e coisas diversas.
+- [Inglês] Revisão de `if statements` e uma conversa engraçada sobre a vida e coisas diversas.
 
 ---
 
