feat(learning): add 9 may 2022

--- a/data/learning/05-2022.mdx
+++ b/data/learning/05-2022.mdx
@@ -3,6 +3,18 @@ date: '2022-05-02'
 draft: false
 ---
 
+## 9 May 2022
+
+### Work
+
+- Working on some Core Web Vitals reports to optimize the performance of the website.
+
+### Hobby
+
+- [14 Habits of Highly Productive Developers] Avoid FOMO and embrace JOMO, hear the noise but pay attention to the signals.
+
+---
+
 ## 7 May 2022
 
 ### Work
