--- a/data/learning/05-2022.pt.mdx
+++ b/data/learning/05-2022.pt.mdx
@@ -3,6 +3,18 @@ date: '2022-05-02'
 draft: false
 ---
 
+## 9 Maio 2022
+
+### Trabalho
+
+- Trabalhando em alguns relatórios Core Web Vitals para otimizar o desempenho do projeto.
+
+### Hobby
+
+- [14 Hábitos de Desenvolvedores Altamente Produtivos] Evite FOMO e abrace JOMO, ouça o barulho mas preste atenção aos sinais.
+
+---
+
 ## 7 Maio 2022
 
 ### Trabalho
